--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
     "parser": "@typescript-eslint/parser",
-    "extends": ["airbnb", "prettier/react", "plugin:prettier/recommended"],
+    "extends": ["airbnb", "plugin:prettier/recommended", "prettier/react"],
     "plugins": ["@typescript-eslint"],
     "parserOptions": {
         "project": "./tsconfig.json"
