feat: Test 라이브러리 설치 및 환경 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
         "types": ["@types/node", "@types/jest"]
     },
     "include": ["src"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "**/*/*.spec.ts", "src/setupTests.ts"]
 }
