--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
         "node": true
     },
     "rules": {
+        "import/no-extraneous-dependencies": ["off"],
         "no-unused-vars": "warn",
         "global-require": "off",
         "no-use-before-define": "off",
