--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "jest",
         "eject": "react-scripts eject",
         "lint:fix": "eslint --fix './src/**/*.{ts,tsx,js,jsx}'"
     },
@@ -49,11 +49,17 @@
         ]
     },
     "devDependencies": {
+        "@types/enzyme": "^3.10.8",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/lru-cache": "^5.1.0",
         "@types/react-router-dom": "^5.1.6",
+        "@types/react-test-renderer": "^17.0.0",
         "@types/styled-components": "^5.1.7",
         "@typescript-eslint/eslint-plugin": "^4.11.1",
-        "@typescript-eslint/parser": "^4.11.1",
+        "@typescript-eslint/parser": "^4.13.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.5",
+        "enzyme-to-json": "^3.6.1",
         "eslint": "^7.16.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-airbnb-typescript": "^12.0.0",
@@ -61,6 +67,7 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prettier": "^3.3.0",
         "eslint-plugin-react": "^7.21.5",
-        "prettier": "^2.2.1"
+        "prettier": "^2.2.1",
+        "ts-jest": "^26.4.4"
     }
 }
