--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
         "react-scripts": "4.0.1",
         "styled-components": "^5.2.1",
         "typescript": "^4.0.3",
-        "web-vitals": "^0.2.4"
+        "web-vitals": "^0.2.4",
+        "@types/react-redux": "^7.1.14",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-logger": "^3.0.6",
+        "redux-saga": "^1.1.3"
     },
     "scripts": {
         "start": "react-scripts start",
