--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.14",
         "axios": "^0.21.1",
         "axios-hooks": "^2.2.0",
         "history": "^5.0.0",
@@ -20,15 +21,14 @@
         "react-loading": "^2.0.3",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
-        "styled-components": "^5.2.1",
-        "typescript": "^4.0.3",
-        "web-vitals": "^0.2.4",
-        "@types/react-redux": "^7.1.14",
-        "react-redux": "^7.2.2",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
-        "redux-saga": "^1.1.3"
+        "redux-saga": "^1.1.3",
+        "styled-components": "^5.2.1",
+        "typescript": "^4.0.3",
+        "web-vitals": "^0.2.4",
+        "react-redux": "^7.2.2"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -60,6 +60,7 @@
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/lru-cache": "^5.1.0",
         "@types/react-router-dom": "^5.1.6",
+        "@types/redux-logger": "^3.0.8",
         "@types/react-test-renderer": "^17.0.0",
         "@types/styled-components": "^5.1.7",
         "@typescript-eslint/eslint-plugin": "^4.11.1",
