JWT토큰 방식 대신 Session방식으로 로그인, 회원가입 과정을 수행하도록 수정

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,9 @@
             {
                 "extensions": [".js", ".jsx", ".ts", ".tsx"]
             }
-        ]
+        ],
+        "prettier/prettier": ["error", {
+            "endOfLine":"auto"
+          }]
     }
 }
