--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
         "axios": "^0.21.1",
         "axios-hooks": "^2.2.0",
         "history": "^5.0.0",
+        "http-proxy-middleware": "^1.1.0",
         "lru-cache": "^6.0.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-icons": "^4.1.0",
+        "react-jsx": "^1.0.0",
         "react-loading": "^2.0.3",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.1",
+        "react-scripts": "^4.0.3",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-logger": "^3.0.6",
@@ -70,7 +72,7 @@
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.5",
         "enzyme-to-json": "^3.6.1",
-        "eslint": "^7.16.0",
+        "eslint": "^7.18.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-airbnb-typescript": "^12.0.0",
         "eslint-config-prettier": "^7.1.0",
